# pro-ml-setup

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: .gitkeep
data/raw/: .gitkeep
data/sample/: iris_sample.csv
learning/: README.md
learning/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/Python/: data_preprocessing_template.ipynb  data_preprocessing_tools.ipynb
learning/Part 2 - Regression/Section 4 - Simple Linear Regression/Python/: simple_linear_regression_practice.ipynb
learning/data/: .gitkeep
learning/lesson_01_pandas_basics/: lesson_01.ipynb  lesson_01.py
models/: .gitkeep
notebooks/: 01_exploration.ipynb  02_housing_experiment.ipynb
outputs/: .gitkeep  housing_best_metrics.json  housing_model_metrics.json
scripts/: daily_run.py  new_lesson.py
src/: __init__.py  data_loader.py  model.py  preprocessing.py  utils.py
tests/: test_data_loader.py  test_model.py  test_preprocessing.py
